turtleart.flower.Flower.scala.error
Erreur de compilation :
Flower:1: error: Missing closing brace `}' assumed here
override def run() {for (i<- 1 to 8){avance(50);droite(45)};
^Flower:1: error: expected start of definition
override def run() {for (i<- 1 to 8){avance(50);droite(45)};
         ^